--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
 
-    <h1>IELTS Jigsaw Trainer</h1>
+    <h1>IELTS Writing Trainer</h1>
     
     <div class="container">
         
